delete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-service
  template:
    metadata:
      labels:
        app: delete-service
    spec:
      containers:
        - name: delete-service
          image: mostafahtm/delete_service:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
