get-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-service
  template:
    metadata:
      labels:
        app: get-service
    spec:
      containers:
        - name: get-service
          image: mostafahtm/get_service:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
