put-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: put-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: put-service
  template:
    metadata:
      labels:
        app: put-service
    spec:
      containers:
        - name: put-service
          image: mostafahtm/put_service:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
