render-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: render-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: render-service
  template:
    metadata:
      labels:
        app: render-service
    spec:
      containers:
        - name: render-service
          image: mostafahtm/render_service:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
