delete-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-service-svc
spec:
  type: ClusterIP
  ports:
    - name: delete-endpoint
      port: 3030
      targetPort: 3030
      protocol: TCP
  selector:
    app: delete-service
