post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service-svc
spec:
  type: ClusterIP
  ports:
    - name: post-endpoint
      port: 3030
      targetPort: 3030
      protocol: TCP
  selector:
    app: post-service
