put-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: put-service-svc
spec:
  type: ClusterIP
  ports:
    - name: put-endpoint
      port: 3030
      targetPort: 3030
      protocol: TCP
  selector:
    app: put-service
