render-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: render-service-service
spec:
  type: ClusterIP
  ports:
    - name: render-endpoint
      port: 3030
      targetPort: 3030
      protocol: TCP
  selector:
    app: render-service
