ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-method-routing
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location /api/books {
        if ($request_method = GET) {
          proxy_pass http://get-service-service:3030;
        }
        if ($request_method = POST) {
          proxy_pass http://post-service-service:3030;
        }
        if ($request_method = PUT) {
          proxy_pass http://put-service-service:3030;
        }
        if ($request_method = DELETE) {
          proxy_pass http://delete-service-service:3030;
        }
      }
spec:
  rules:
    - http:
        paths:
          - path: /render
            pathType: Prefix
            backend:
              service:
                name: render-service-service
                port:
                  number: 3030
